@@ -314,6 +314,13 @@ static struct query queries[] = {
 			ERR_NOSUCHNICK, ERR_NOSUCHCHANNEL, ERR_BLOCKING_NOTID, 0 },
 		handle_default
 	},
+
+	{ "NICKSERV",
+		{ 0 },
+		{ RPL_TRYAGAIN, 0 },
+		{ ERR_NOTEXTTOSEND, 0 },
+		handle_default
+	},
  
  /* MOTD [<target>] */
 	{ "MOTD",
