@@ -77,6 +77,8 @@ Ctrlproxy 3.0.6 UNRELEASED
 	* Correctly generate prefix when replicating users that have more 
 	  than one mode set. (Martin Meredith)
 
+    * Support NICKSERV command when tracking messages.
+
   INTERNALS
 
     * A simple, single API is now used for managing modes.
